fix a gap above 'read more' in the latest updates column

--- a/bbc.css
+++ b/bbc.css
@@ -627,6 +627,7 @@ hr {
     width: 102px;
     padding: 5px 0px 5px 8px;
     float: left;
+    margin-top: 13px;
 
 }
 
